# Eightest

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: Linux.yml  Windows.yml  macOS.yml
include/Eightest/: Core.hpp
src/Eightest/: Core.cpp
test/: Launcher.cpp
